init Cards Responsivos
Cards agora sao baseados em objetos unicos

--- a/front/fazer/src/app/components/read-all/read-all.component.html
+++ b/front/fazer/src/app/components/read-all/read-all.component.html
@@ -1,12 +1,11 @@
 <div class="container">
+    <button class="novo-fazer mat-elevation-z8" mat-strocked-button color="primary">Nova Tarefa</button>
 
-    <div class="content">
-        <button class="novo-fazer mat-elevation-z8" mat-strocked-button color="primary">Nova Tarefa</button>
-
+    <div class="content" *ngFor="let item of list">
         <mat-card class="mat-elevation-z8">
-            <p>Data para finalizar: </p>
+            <p>Data para finalizar: {{ item.dataParaFinalizar }}</p>
             <mat-card-header>
-              <mat-card-title>Shiba Inu</mat-card-title>
+              <mat-card-title>{{ item.titulo }}</mat-card-title>
               <mat-card-subtitle>Dog Breed</mat-card-subtitle>
             </mat-card-header>
 
@@ -24,9 +23,8 @@
 
           </mat-card>
 
-
-
     </div>
 
 
 </div>
+
